# originality

./: .gitignore  CLAUDE.md  README.md
whitespace_1/: .env.example  .envrc  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
whitespace_1/docs/: conceptual.md  ws1-insulation-prereg.md  ws1-oss-reasoning-arm.md  ws1-oss-rung0-build-brief.md  ws1-oss-rung0-stimuli.md  ws1-oss-rung0-v2-prereg.md  ws1-oss-rung1-prereg.md  ws1-oss-rung2-result.md
whitespace_1/experiments/: analyze_insulation.py  analyze_rung1_null.py  analyze_rung1_r4.py  analyze_rung2.py  analyze_rung2_reasoning.py  pool_rung0_v2_seeds.py  run_insulation.py  run_preflight.py  run_preflight_v2.py  run_rung0.py  run_rung0_v2.py  run_rung1_day0.py  run_rung1_r4.py  run_rung2.py  run_rung2_reasoning.py  smoke_deepseek_trace.py
whitespace_1/runs/: deepseek-trace-smoke.json  insulation-confirm.json  rung0-ea283ed42d99.json  rung0-v2-762f48f4d1dd-skel.jsonl  rung0-v2-762f48f4d1dd.json  rung0-v2-a28965362227-skel.jsonl  rung0-v2-a28965362227.json  rung0-v2-d1af2cd9a75f-skel.jsonl  rung0-v2-d1af2cd9a75f.json  rung1-day0-deepseek.json  rung1-r4-confirm.json  rung1-r4-null.json  rung2-r4-confirm.json  rung2-reasoning-confirm.json
whitespace_1/runs/insulation/: topic-a-run0.json  topic-a-run1.json  topic-a-run2.json  topic-a-run3.json  topic-b-run0.json  topic-b-run1.json  topic-b-run2.json  topic-b-run3.json
whitespace_1/src/whitespace1/: __init__.py  catalog.py  client.py  credentials.py  insulation.py  preflight.py  rung0.py  rung0_v2.py  rung1_confirm.py  rung1_day0.py  rung1_null.py  rung1_r4.py  rung2_reasoning.py  schedule.py  stimuli.py
whitespace_1/tests/: test_client.py  test_credentials.py  test_insulation.py  test_preflight.py  test_rung0.py  test_rung0_v2.py  test_rung1_confirm.py  test_rung1_day0.py  test_rung1_null.py  test_rung1_r4.py  test_rung2_reasoning.py  test_scaffold.py  test_schedule.py
whitespace_2/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
whitespace_2/data/: .gitignore  README.md
whitespace_2/data/metadata/: check5bd-heldout-1975-smoke.parquet  check5bd-heldout-1975.parquet  check5bd-heldout-2020-smoke.parquet  check5bd-heldout-2020.parquet  check5bd-pull-2024-cs-smoke.parquet  check5bd-stratified-pool-smoke.parquet  check5bd-stratified-pool.parquet  check5bd-unstratified-pool-smoke.parquet  check5bd-unstratified-pool.parquet  cluster-fit-manifest-S-K10-smoke.npy  cluster-fit-manifest-S-K100.npy  cluster-fit-manifest-S-K25-smoke.npy  cluster-fit-manifest-S-K30.npy  cluster-fit-manifest-S-K50-smoke.npy  cluster-fit-manifest-S-K50.npy  cluster-fit-manifest-U-K10-smoke.npy  cluster-fit-manifest-U-K100.npy  cluster-fit-manifest-U-K25-smoke.npy  cluster-fit-manifest-U-K30.npy  cluster-fit-manifest-U-K50-smoke.npy  cluster-fit-manifest-U-K50.npy  cluster-fit-manifest-smoke.md  cluster-fit-manifest.md  drift-pilot-pool-smoke.parquet  drift-pilot-pool.parquet  drift-pilot-queries-smoke.parquet  drift-pilot-queries.parquet  embedding-model-pins.csv  field_definitions.csv  genderize-cache.json  heldout-1975-cs-v2.parquet  heldout-1975-cs-v3.parquet  heldout-1975-cs.parquet  heldout-1975-physics-v2.parquet  heldout-1975-physics-v3.parquet  heldout-1975-physics.parquet  heldout-2020-cs-v2.parquet  heldout-2020-cs-v3.parquet  heldout-2020-cs.parquet  heldout-2020-physics-v2.parquet  (+51 more)
whitespace_2/docs/: concentration-measures.md  conceptual.md  desiderata.md  plan-at-a-glance.md
whitespace_2/docs/phases/: phase-0.1-plan.md  phase-0.1-retro.md  phase-0.2-execution.md  phase-0.2-plan.md  phase-0.2-retro.md  phase-0.2-scincl-primary-contingency.md  phase-1.1-plan.md  phase-1.2-plan.md  phase-1.2-retro.md  phase-1.3-plan.md  phase-1.3-retro.md  phase-1.4-plan.md  phase-1.4-retro.md  phase-2.0-plan.md  phase-2.1-plan.md  phase-2.1-retro.md  phase-2.2-plan.md  phase-2.2-retro.md  phase-2.3-plan.md  phase-2.3-retro.md  phase-2.4-plan.md  phase-2.4-retro.md
whitespace_2/docs/primers/: .gitignore  stats.tex  topic-modeling.md
whitespace_2/experiments/phase-0.1/: abstract-coverage-by-type-raw.parquet  abstract-coverage-by-type.csv  abstract-coverage-by-type.md  abstract-coverage-raw.parquet  abstract-coverage.csv  abstract-coverage.md  anachronism-audit.csv  anachronism-audit.md  arxiv-coverage-raw.parquet  arxiv-coverage.csv  arxiv-coverage.md  check1_abstract_coverage.py  check1c_coverage_by_type.py  check1d_arxiv_coverage.py  check1e_s2ag_coverage.py  check1f-country-extraction-followup-known.csv  check1f-country-extraction-followup-unknown.csv  check2a-venues.csv  (+72 more)
whitespace_2/literature-review/: 01-chu-evans-2021-canonical-progress.md  02-park-leahey-funk-2023-less-disruptive.md  03-petersen-arroyave-pammolli-2024-citation-inflation-bias.md  04-petersen-arroyave-pammolli-2025-team-size-cd.md  05-holst-2024-dataset-artefacts.md  06-hofstra-2020-diversity-innovation-paradox.md  07-lockhart-king-munsch-2023-name-based-demographic-inference.md  08-wu-wang-evans-2019-large-teams.md  14-kozlowski-lariviere-sugimoto-monroe-white-2022-intersectional-inequalities.md  15-funk-2026-disruption-inventory.md  16-culbert-2024-openalex-coverage.md  README.md
whitespace_2/tests/: test_check1_coverage.py  test_cluster_fit.py  test_concentration_measures.py  test_demographics.py  test_divergence.py  test_embeddings.py  test_metrics.py  test_null_ref_gini.py  test_openalex.py  test_pipeline_verification.py  test_resumable_runner.py  test_s2ag.py  test_section0_filter.py  test_smoke.py  test_subfield_divergence.py  test_v_extension.py
whitespace_3/: CLAUDE.md  Makefile  README.md  pyproject.toml
whitespace_3/docs/: conceptual.md  counterfactual-resolution-map.md  resolution-map-phase3-prereg.md  resolution-map-phase3-retro.md
whitespace_3/experiments/: cv_predictor_audit.py
whitespace_3/tests/: test_analytics.py  test_canon.py  test_channel.py  test_concept_base.py  test_conformity.py  test_innovation.py  test_measures.py  test_reconciliation.py  test_resolution.py  test_resolution_coverage.py  test_roles.py  test_subfield.py  test_topology.py  test_transmission.py
(+227 files in other folders)
