[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whitespace2"
version = "0.0.0"
description = "Empirical decomposition of demographic vs. semantic plurality in scientific literature (1970-2024)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<2",
    "pandas>=2.1",
    "pyarrow>=15",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "requests>=2.31",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "pandas-stubs",
    "types-requests",
    "types-tqdm",
]
embed = [
    "sentence-transformers>=2.7",
    "transformers>=4.40",
    "torch>=2.2",
]
demo = [
    "gender-guesser>=0.4",
]
data = [
    "duckdb>=0.10",
]
plot = [
    "matplotlib>=3.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: long-running experiments (deselected by default)"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["sentence_transformers.*", "transformers.*", "torch.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["gender_guesser.*", "sklearn.*", "scipy.*", "duckdb.*", "matplotlib.*"]
ignore_missing_imports = true
