[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whitespace2"
version = "0.0.0"
description = "Empirical decomposition of demographic vs. semantic plurality in scientific literature (1970-2024)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<2",
    "pandas>=2.1",
    "pyarrow>=15",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "requests>=2.31",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "modal>=1.2",
    "polars>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "pandas-stubs",
    "types-requests",
    "types-tqdm",
]
embed = [
    # torch pinned to 2.2.x because higher versions lack macOS arm64 wheels
    # in the resolver's default index (2.4+ wheels exist but require
    # explicit PyTorch index or prerelease flag). Phase 0.1.E smoke-tests
    # on torch 2.2.x; revisit at Stage 1 if MPS perf is the binding
    # constraint.
    "torch>=2.2,<2.3",
    # transformers >=4.51 needed for Qwen3 model-type support (added 2025-03).
    # 4.50+ also enforces the CVE-2025-32434 check that blocks loading .bin
    # checkpoints via torch.load on torch<2.6. SPECTER2 ships only .bin
    # weights — we work around this by converting to safetensors at first
    # load (see _ensure_specter2_safetensors in embeddings.py). The
    # conversion is bit-exact and is one-time per machine; ws2 trusts AI2
    # provenance for the underlying weights.
    "transformers>=4.51,<5",
    "sentence-transformers>=2.7,<4",
    # adapters: AI2 SPECTER2 proximity-adapter loader. Maintained successor
    # to adapter-transformers; required for plan §1's pinned SPECTER2 setup.
    "adapters>=0.2,<2",
    # safetensors: needed for the SPECTER2 .bin → safetensors conversion.
    "safetensors>=0.4",
]
demo = [
    "gender-guesser>=0.4",
]
data = [
    "duckdb>=0.10",
]
plot = [
    "matplotlib>=3.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: long-running experiments (deselected by default)"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "transformers.*",
    "torch.*",
    "adapters.*",
    "safetensors.*",
    "huggingface_hub.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "gender_guesser.*",
    "sklearn.*",
    "scipy.*",
    "duckdb.*",
    "matplotlib.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# pyarrow ships partial stubs but several core entry points (ParquetFile,
# ParquetWriter, write_table, etc.) are typed as untyped functions in
# strict-mode mypy. Treat pyarrow calls as Any rather than littering the
# code with per-call # type: ignore comments.
module = ["pyarrow", "pyarrow.*"]
ignore_missing_imports = true
follow_imports = "skip"
